Created sidebar widget

--- a/assets/src/sass/4-layouts/_header.scss
+++ b/assets/src/sass/4-layouts/_header.scss
@@ -25,6 +25,7 @@
     box-shadow: 0px 0px 0px $charleston-green;
     max-height: 4rem;
     overflow: hidden;
+    z-index: $z-element-1;
 
     .top-menu__item{
         display: inline-block;
