--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -7,6 +7,8 @@
 
 @import "4-layouts/page-element";
 
+@import './blocks';
+
 // Generic
 /* @import "2-generic/generic";
 @import "2-generic/gutenberg";
