--- a/assets/src/sass/0-settings/_typography.scss
+++ b/assets/src/sass/0-settings/_typography.scss
@@ -29,27 +29,43 @@ $body-text: (
 	"h1": (
 		"sm": (
 			font-size: 6rem,
-			line-height: 1.27,
+			line-height: 1.2,
 		),
 		"md": (
 			font-size: 7rem,
-			line-height: 1.27,
+			line-height: 1.1,
 		),
 		"lg": (
 			font-size: 8rem,
-			line-height: 1.27,
+			line-height: 1.1,
 		)
 	),
 	"h2": (
 		"sm": (
+			font-size: 6rem,
+			line-height: 1.2
+		),
+		"md": (
+			font-size: 6.5rem,
+			line-height: 1.1,
+		),
+		"lg": (
 			font-size: 7rem,
-			line-height: 1.27
+			line-height: 1.1,
 		)
 	),
 	"h3": (
 		"sm": (
+			font-size: 5rem,
+			line-height: 1.2
+		),
+		"md": (
+			font-size: 5.5rem,
+			line-height: 1.1
+		),
+		"lg": (
 			font-size: 6rem,
-			line-height: 1.64
+			line-height: 1.1
 		),
 	),
 	"h4": (
@@ -74,14 +90,14 @@ $body-text: (
 	),
 	"h6": (
 		"sm": (
-			font-size: 2.4rem,
+			font-size: 2.5rem,
 			line-height: 1.3
 		),
 	),
 	"p": (
 		"sm": (
 			font-size: 2rem,
-			line-height: 1.8
+			line-height: 1.25
 		),
 	),
 	"html": (
