--- a/assets/src/sass/2-generic/_common-classes.scss
+++ b/assets/src/sass/2-generic/_common-classes.scss
@@ -53,6 +53,12 @@
 .has-light-gray-background-color{background-color: $light-gray;}
 
 /*--------------------------
+		Shadows
+---------------------------*/
+
+.page-shadow { box-shadow: 1px 1px 2px $light-gray; }
+
+/*--------------------------
 		Text Weight
 ---------------------------*/
 
@@ -152,6 +158,7 @@
 ------------*/
 .d-block{ display: block; }
 .d-hide { display: none; }
+.d-inline-block { display: inline-block; }
 
 // Flex
 .d-flex{ 
