--- a/assets/src/sass/_blocks.scss
+++ b/assets/src/sass/_blocks.scss
@@ -9,18 +9,12 @@
 @import "2-generic/elements";
 @import "2-generic/common-classes";
 
-@import "4-layouts/page-element";
+@import "4-layouts/page-element"; */
 
 @import "7-blocks/layout";
-
-
 @import '7-blocks/sizes-control';
 @import '7-blocks/parallax-background';
 @import '7-blocks/image';
 @import '7-blocks/button';
 
 
- */
-
-
-/*# sourceMappingURL=blocks.css.map*/
