--- a/assets/src/sass/7-blocks/_button.scss
+++ b/assets/src/sass/7-blocks/_button.scss
@@ -12,6 +12,8 @@
 	.editor-styles-wrapper .wp-block-button,
 	.wp-block-button {
 
+		min-width:fit-content;
+		
 		&.wp-block-button__width-25{ width: 25%; }
 		&.wp-block-button__width-50{ width: 50%; }
 		&.wp-block-button__width-75{ width: 75%; }
