--- a/assets/src/sass/7-blocks/_layout.scss
+++ b/assets/src/sass/7-blocks/_layout.scss
@@ -1,4 +1,6 @@
 .wp-block-columns{
+
+    overflow:hidden;
     
     /* Classi da aggiungere manualmente */
     &.are-justified-left{ justify-content: flex-start; }
